# hecm

./: .gitignore  404.html  README.md  alo.py  alo2.py  claude_attempts.json  create_data.ipynb  index.html  kill_containers.sh  mkdocs.yml  new.py  objects.inv  pyproject.toml  sachin-xyne.ovpn  test.ipynb  test.py
.github/workflows/: check-lint.yml  publish-docs.yml
api_reference/dataset_generation/: index.html
api_reference/eval_harness/agent/: index.html
api_reference/eval_harness/evaluation/: index.html
api_reference/eval_harness/test_execution/: index.html
docs/: index.md
docs/api_reference/: dataset_generation.md
docs/api_reference/eval_harness/: agent.md  evaluation.md  test_execution.md
hecm/: __init__.py  generate_predictions.py  generator.py  gh_utils.py  schemas.py  utils.py
hecm/dataset_generation/: __init__.py  claude_generator.py  generator.py  schemas.py  trace_generator.py  utils.py
hecm/eval_harness/: __init__.py
hecm/eval_harness/agent/: __init__.py  base.py  claude_code_agent.py
hecm/eval_harness/evaluation/: __init__.py  base.py  claude_agent_evaluator.py  claude_code_evaluator.py  evaluator.py
hecm/eval_harness/evaluation/legacy/: base.py  claude_code_evaluator.py
hecm/eval_harness/test_execution/: __init__.py  base.py  claude_hyperswitch.py  juspay_hyperswitch.py
hecm/eval_harness/test_execution/legacy/: base.py  (+2 more)
hecm/runtime_patches/: local_vllm.py
hecm/utils/: md_utils.py
scripts/: a.py  claude_code_eval.py  claude_code_single_evaluation.py  evaluate.py  evaluate_for_hyperswitch.py  upload_to_weave.py
search/: search_index.json
